fix scale issue on ie

--- a/src/components/angledImage/style.module.css
+++ b/src/components/angledImage/style.module.css
@@ -40,7 +40,10 @@
   background-color: #D8D8D8;
   background-position: 100% 50%;
   background-size: cover;
-  transform: scale(1.1, 1.1, 2);
+  transform: translateZ(0);
+  transform: translate3d(0, 0, 0);
+  transform: scale(1.1, 1.1, 2) rotate(0.02deg);
+  perspective: 1000;
   transition: transform 10s ease-out;
 }
 
@@ -56,5 +59,5 @@
 }
 
 .active .image {
-  transform: scale3d(1, 1, 1);
+  transform: scale3d(1, 1, 1) rotate(0.02deg);
 }
